<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="sh3lwan.graduation.ProductDetails">

    <TextView
        android:id="@+id/details_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Product Name"
        android:textSize="@dimen/product_item_textsize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RatingBar
            android:id="@+id/details_ratingbad"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressBackgroundTint="@color/normal_white"
            android:progressTint="@color/foreground_yellow_dark"
            android:rating="3.5"
            android:secondaryProgressTint="@color/normal_white"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/details_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/details_reviews_default" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/details_description_title"
        android:textSize="@dimen/product_item_textsize" />

    <TextView

        android:id="@+id/product_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Hello this is a product here !"
        android:textSize="@dimen/product_details_textsize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_price_title" />

        <TextView
            android:id="@+id/product_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="$499.00"
            android:textColor="@color/foreground_yellow_dark"
            android:textSize="@dimen/product_details_textsize" />

        <TextView
            android:id="@+id/product_details_sec_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="$500.00" />
    </LinearLayout>
</LinearLayout>
